--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,24 +5,24 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BNF-US Trading Observatory</title>
-    <meta name="description" content="6개월 추천 후보" />
+    <meta name="description" content="어떤 종목을 매수 추천할까?" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="BNF-US" />
-    <meta property="og:title" content="BNF-US 종목" />
-    <meta property="og:description" content="6개월 추천 후보" />
+    <meta property="og:title" content="전설적 투자자 BNF라면" />
+    <meta property="og:description" content="어떤 종목을 매수 추천할까?" />
     <meta property="og:url" content="http://trader.p-e.kr/" />
     <meta property="og:image" content="http://trader.p-e.kr/og-image1.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:alt" content="BNF-US 종목" />
+    <meta property="og:image:alt" content="전설적 투자자 BNF라면" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="BNF-US 종목" />
-    <meta name="twitter:description" content="6개월 추천 후보" />
+    <meta name="twitter:title" content="전설적 투자자 BNF라면" />
+    <meta name="twitter:description" content="어떤 종목을 매수 추천할까?" />
     <meta name="twitter:image" content="http://trader.p-e.kr/og-image1.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
